# V1H

./: LICENSE  README.md  pyproject.toml
configs/: config_naco_M.py  experiment_template.py  load_config.py
draft_paper/: draft.tex
instruments/: ao_instrument.py
neural_networks/: conv_autoencoder.py  dataset.py  dense_psf.py  gpkh.py  gpkh_convdecoder.py  layers.py  losses.py  plot_training.py  skh.py  training.py  unet.py
noises/: noise.py  noise_simulator.py  random_noise_parameters.py
phases/: lwe.py  phase_generator.py  powerlaw.py  random_phase_parameters.py  zernike.py
psfs/: centering.py  generate_psfs.py
skies/: gaussian_random_fields.py  image_generator.py  random_sky_parameters.py
testing/: __init__.py  galsim_evaluation.py
utils/: array_backend.py  convolution.py  data_utils.py  io.py  metrics.py  model_building.py  model_io.py  model_utils.py  normalization.py  plot_helpers.py  random_compat.py  temp_paths.py  tfrecord_io.py
workflow/: benchmark_collect_results.py  benchmark_timing.py  benchmark_workflow.sh  create_dataset.py  galsim_ao_grid.py  independent_training.py  joint_pinn_fourhead_training.py  plot_results.py  psf_uncertainty_stage2_training.py  run_experiment.sh  test_on_galsim.py  test_on_galsim_step2a_inference.py  test_on_galsim_step2b_richardson_lucy.py  test_on_galsim_step2c_wiener.py  test_on_galsim_step3_analysis.py  test_on_galsim_step4_plot.py  testing_workflow.sh
