[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "v1h"
version = "0.1.0"
description = "Physics-informed neural network for adaptive-optics image deconvolution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tensorflow>=2.13",
    "matplotlib",
    "hcipy",
    "astropy",
    "joblib",
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]

[tool.setuptools.packages.find]
include = [
    "configs*",
    "instruments*",
    "neural_networks*",
    "noises*",
    "phases*",
    "psfs*",
    "skies*",
    "testing*",
    "utils*",
    "workflow*",
]
